@@ -1,7 +1,7 @@
 [info]
 author=Christian Knobloch
 name=Clean (old)
-version=2.0.2.6
+version=2.0.2.7
 uid=de.der-knob.sally.theme.clean.old
 
 [menu.font.small]
@@ -964,18 +964,18 @@ size=12
 face=Arial
 
 [infopopup.title.font]
-r=255
-g=255
-b=255
+r=0
+g=0
+b=0
 bold=1
 italic=0
 size=12
 face=Arial
 
 [infopopup.text.font]
-r=255
-g=255
-b=255
+r=30
+g=30
+b=30
 bold=0
 italic=0
 size=9
