@@ -1,7 +1,7 @@
 [info]
 author=Christian Knobloch
 name=I Love PUMA
-version=1.0.3.1
+version=1.0.3.2
 uid=de.der-knob.sally.theme.ilovepuma
 
 [menu.font.small]
@@ -964,18 +964,18 @@ size=12
 face=Tahoma
 
 [infopopup.title.font]
-r=255
-g=255
-b=255
+r=0
+g=0
+b=0
 bold=1
 italic=0
 size=12
 face=Tahoma
 
 [infopopup.text.font]
-r=255
-g=255
-b=255
+r=89
+g=90
+b=89
 bold=0
 italic=0
 size=9
